test/compile_errors/err_label_cross_async_boundary.w
//! expect-check-fail: label cannot cross function, closure, or async boundary

fn main:
    var flag = true
    'outer while flag:
        async:
            break 'outer
        flag = false
